render from backend view

--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: rgb(104, 59, 89);
+    /* background-color: rgb(104, 59, 89); */
+    background-color: red;
 }
 
 .grid {
