--- a/client2/style.css
+++ b/client2/style.css
@@ -18,3 +18,13 @@ body {
     text-align: center;
     font-size: 24px;
 }
+
+#cursor-follower {
+    position: fixed;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    background-color: #000;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+}
